@@ -1,1 +1,1 @@
-#define KPPPVERSION "0.7.1"
+#define KPPPVERSION "0.7.2"
