@@ -1,3 +1,9 @@
+Fri Dec 19 22:49:18 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
+
+	* Extended the grammar of the tarif rules. 
+	  New keyword: flat_init_costs necessitated by the new french
+	  accounting rules.
+
 Tue Dec 16 01:54:50 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
 
 	* extended scripting capabilities to allow password dialogs
